# Proyecto-1---Back

./: .dockerignore  .env.example  .gitignore  CHECKLIST.md  Dockerfile  MIGRATION_NOTES.md  Makefile  QUICKSTART.md  README.md  alembic.ini  copilot_instructions_livemenu_entrega1.md  docker-compose.yml  generate-certs.sh  openapi.json  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
api/app/: __init__.py  main.py
api/app/api/: deps.py
api/app/api/routers/: analytics.py  auth.py  categories.py  dishes.py  menu.py  menu_public.py  qr.py  restaurant.py  upload.py
api/app/core/: cache.py  config.py  logging.py  secrets.py  storage.py
api/app/core/middleware/: errors.py  rate_limit.py  request_id.py
api/app/core/security/: __init__.py  jwt.py  passwords.py
api/app/models/: __init__.py  category.py  dish.py  refresh_token.py  restaurant.py  scan_event.py  user.py
api/app/repositories/: analytics_repo.py  category_repo.py  dish_repo.py  refresh_token_repo.py  restaurant_repo.py  user_repo.py
api/app/schemas/: __init__.py  analytics.py  auth.py  category.py  dish.py  menu.py  restaurant.py  upload.py
api/app/services/: analytics_service.py  auth_service.py  category_service.py  dish_service.py  menu_service.py  qr_service.py  restaurant_service.py  upload_service.py
api/app/templates/: menu.html
api/app/utils/: csv_export.py  datetime_utils.py  pagination.py  slug.py
database/: base.py  session.py
database/migrations/: env.py  init.sql
database/migrations/versions/: 2026_02_21_1527-1ee53ca6855a_init.py
docs/: api_documentation.html  documentacion_proyecto_gcp.docx  informe_seguridad_livemenu.docx
infra/terraform/: .gitignore  README.md  apis.tf  artifact_registry.tf  cloud_armor.tf  cloud_run.tf  cloud_sql.tf  iam.tf  load_balancer.tf  main.tf  network.tf  outputs.tf  secrets.tf  storage.tf  terraform.tfvars.example  variables.tf
nginx/: nginx.conf
nginx/certs/: .gitkeep
postman/: LiveMenu API.postman_collection.json  LiveMenu.postman_collection.json
scratch/: test_loop.py  test_req.ps1  test_req.py
tests/: __init__.py  conftest.py  test_analytics.py  test_analytics_service.py  test_auth.py  test_auth_service.py  test_cache.py  test_categories.py  test_category_service.py  test_config.py  test_csv_export.py  test_deps.py  test_dish_service.py  test_dishes.py  test_jwt.py  test_logging.py  test_main.py  test_menu.py  test_menu_service.py  test_middleware.py  test_pagination.py  test_passwords.py  test_qr.py  test_qr_service.py  test_repositories.py  test_request_id.py  test_restaurant.py  test_restaurant_service.py  test_schemas.py  test_slug.py  test_storage.py  test_upload.py  test_upload_service.py
videos/: link.md
