[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["api*", "database*"]

[project]
name = "livemenu-api"
version = "1.0.0"
description = "LiveMenu Backend API with FastAPI and PostgreSQL"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",
    "jinja2>=3.1.0",
    "SQLAlchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.0",
    "python-multipart>=0.0.6",
    "structlog>=24.1.0",
    "slowapi>=0.1.9",
    "qrcode[pil]>=7.4.0",
    "Pillow>=10.2.0",
    "boto3>=1.34.0",
    "google-cloud-secret-manager>=2.20.0",
    "google-cloud-storage>=2.18.0",
    "cloud-sql-python-connector[asyncpg]>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.3.0",
    "httpx>=0.26.0",
    "ruff>=0.1.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Lint set scoped to "real bugs" so style noise doesn't drown the signal.
# Keep pyflakes (F) which catches unused imports / undefined names, and
# bugbear (B) which catches likely-bug patterns. Style-only rules (E/W/I/UP)
# are dropped because the original codebase has hundreds of pre-existing
# violations and fixing them is not the point of Entrega 2.
select = [
    "F",   # pyflakes — actual bugs
    "B",   # bugbear — likely-bug patterns
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function calls in argument defaults (FastAPI Depends pattern)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# --timeout=30: kills any test that runs longer than 30s. The worker pool
# tests can hang forever now that workers only spin up via the lifespan
# context manager (they do not auto-start when app is imported).
addopts = "-v --tb=short --strict-markers --timeout=30"

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 60
